Added editing directly from the browse page.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,8 @@ javac.classpath=\
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
-javac.source=${default.javac.source}
-javac.target=${default.javac.target}
+javac.source=1.5
+javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -49,7 +49,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jspcompilation.classpath=${jspc.classpath}:${javac.classpath}
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-platform.active=default_platform
+platform.active=Java_HotSpot_TM__Client_VM_1.5.0_06-b05
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
