Upgrade to run with NetBeans 7.3/GlassFish 3.1.2

--- a/src/java/com/zwarg/guestlist/data/DataAccess.properties
+++ b/src/java/com/zwarg/guestlist/data/DataAccess.properties
@@ -1,6 +1,6 @@
 # Sample ResourceBundle properties file
 username=guestlist
-password=w3dd1ng
+password=guestlist
 host=localhost
 port=5432
 database=guestlist
