--- a/src/java/com/zwarg/struts/ApplicationResource.properties
+++ b/src/java/com/zwarg/struts/ApplicationResource.properties
@@ -1,7 +1,9 @@
+# -- standard errors --
 errors.header=<UL>
 errors.prefix=<LI>
 errors.suffix=</LI>
 errors.footer=</UL>
+# -- validator --
 errors.invalid={0} is invalid.
 errors.maxlength={0} can not be greater than {1} characters.
 errors.minlength={0} can not be less than {1} characters.
@@ -16,29 +18,12 @@ errors.long={0} must be an long.
 errors.short={0} must be an short.
 errors.creditcard={0} is not a valid credit card number.
 errors.email={0} is an invalid e-mail address.
+# -- other --
 errors.cancel=Operation cancelled.
 errors.detail={0}
 errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
-welcome.title=Guest List Manager
-welcome.heading=Welcome to the Guest List Manager
-welcome.message=Start managing the guests for David and Mary's wedding:
-logout.label=Logout
-guest.title=Guests
-guest.add=Add
-guest.browse=Browse
-guest.delete=Delete
-guest.lock=Lock/Unlock
-host.title=Hosts
-host.add=Add
-host.browse=Browse
-host.delete=Delete
-host.lock=Lock/Unlock
-
-host.add.title=Add Host
-host.add.nick=Name
-host.add.color=Color
-host.add.user=Login
-host.add.pass=Password
-host.add.reset=Clear
-host.add.submit=Add
+# -- welcome --
+welcome.title=Struts Application
+welcome.heading=Struts Applications in Netbeans!
+welcome.message=It's easy to create Struts applications with NetBeans.
