Added copyright & license notice.

--- a/src/java/com/zwarg/guestlist/data/DataAccess.properties
+++ b/src/java/com/zwarg/guestlist/data/DataAccess.properties
@@ -1,4 +1,9 @@
-# Sample ResourceBundle properties file
+# Copyright (c) 2013 David Zwarg <david.zwarg@gmail.com>
+# See LICENSE in the project root for copying permission.
+#
+# This file is part of the GuestList web application.
+
+# Connection information to the guestlist database server
 username=guestlist
 password=guestlist
 host=localhost
